fix overflow

--- a/src/input.css
+++ b/src/input.css
@@ -7,7 +7,7 @@ body {
     background-color: #0d1117;
     /* background-color: #161B22; */
     color: #fff;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 button {
